[package]
name = "rusty-writes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
rand = "0.8.5"
tempfile = "3.6.0"
thread_local = "1.1.7"
tokio = { version = "1.28.2", features = ["full"] }
